--- a/Spark.TableStatsExample-master/pom.xml
+++ b/Spark.TableStatsExample-master/pom.xml
@@ -18,7 +18,14 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency><!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_2.11 -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.11</artifactId>
+            <version>2.0.0</version>
         </dependency>
+
+
         <dependency>
     <groupId>org.scala-lang</groupId>
     <artifactId>scala-compiler</artifactId>
