--- a/Spark.TableStatsExample-master/pom.xml
+++ b/Spark.TableStatsExample-master/pom.xml
@@ -84,10 +84,15 @@
     <version>2.8.4</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-annotations</artifactId>
-    <version>2.8.4</version>
+<!-- <dependency> -->
+<!--     <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--     <artifactId>jackson-annotations</artifactId> -->
+<!--     <version>2.8.4</version> -->
+<!-- </dependency> -->
+   <dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.8.11.1</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 <dependency>
