--- a/Spark.TableStatsExample-master/pom.xml
+++ b/Spark.TableStatsExample-master/pom.xml
@@ -81,7 +81,7 @@
 <dependency>
     <groupId>com.fasterxml.jackson.module</groupId>
     <artifactId>jackson-module-scala_2.11</artifactId>
-    <version>2.8.4</version>
+    <version>[2.8.11.1,)</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
 <!-- <dependency> -->
@@ -92,19 +92,19 @@
    <dependency>
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-databind</artifactId>
-  <version>2.8.11.1</version>
+  <version>[2.8.11.1,)</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-core</artifactId>
-    <version>2.8.4</version>
+    <version>[2.8.11.1,)</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
-    <version>2.8.4</version>
+    <version>[2.8.11.1,)</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/net.liftweb/lift-json_2.9.1 -->
 <dependency>
