--- a/Spark.TableStatsExample-master/pom.xml
+++ b/Spark.TableStatsExample-master/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-core_2.11</artifactId>
-    <version>2.0.0</version>
+   <version>[2.2.0,)</version>
 </dependency>
 <dependency>
     <groupId>com.google.code.gson</groupId>
